--- a/index.html
+++ b/index.html
@@ -1,40 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <title>Your Name</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
+      integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Daniel Marczydlo - Info page</title>
+  </head>
+  <body>
     <div class="grid-2">
-        <div class="section-1">
-            <i class="fas fa-code fa-5x white"></i>
-            <h2>FirstName LastName</h2>
-            <p>City,Country.</p>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-github"></i></a>
-        </div>
-        <div class="section-2">
-            <h2>About</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quas sint et nihil iusto eius nostrum sit error, repellat optio quisquam! Magnam dolore iusto cumque. Nostrum error iste neque maiores.</p>
-            <h2>Experience</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis in maiores autem quidem.</p>
+      <div class="section-1">
+        <i class="fas fa-code fa-5x white"></i>
+        <h2>Daniel Marczydlo</h2>
+        <p>Rzeszow, Poland.</p>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.linkedin.com/in/daniel-marczydlo/"
+          ><i class="fab fa-linkedin"></i
+        ></a>
+        <a href="https://github.com/dmarczydlo"
+          ><i class="fab fa-github"></i
+        ></a>
+      </div>
+      <div class="section-2">
+        <h2>About</h2>
+        <p>
+          I'm a Full-Stack Web developer and Architect as well. Determined and
+          open to new knowledge and experience. Fan of: NestJs and React.
+          Privately happy husband and father
+        </p>
+        <h2>Experience</h2>
+        <p>
+          As a web developer I'm working from 2012, I have some experience as
+          Architect and Project Manager as well
+        </p>
 
-            <h2>Skills</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis in maiores autem quidem obcaecati excepturi! Cupiditate eaque itaque magni voluptatibus neque nobis est dolor? Atque sunt minus ipsa asperiores. At.</p>
-            <h2>Projects</h2>
-            <a href="#">Project 1</a>
-            <a href="#">Project 2</a>
-            <a href="#">Project 3</a>
-            <a href="#">Project 4</a>
-            <a href="#">Project 5</a>
-            <h2>Contact</h2>
-            <p>myEmail@email.com</p>
-        </div>
+        <h2>Skills</h2>
+        <p>
+          JavaScript, TypeScript, NestJs, React, ES5+, Node, AWS, GCP, Docker,
+        </p>
+        <h2>Contact</h2>
+        <p>daniel.marczydlo[at]gmail.com</p>
+      </div>
     </div>
-</body>
+  </body>
 </html>
